--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "droidx",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.3",
@@ -20,8 +21,11 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "mongoose": "^5.9.25",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
