--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
-    "gulp-rev": "^9.0.0",
+    "gulp-revmanifest": "^1.1.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -42,5 +42,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^2.1.3"
+  },
+  "devDependencies": {
+    "gulp-rev": "^9.0.0"
   }
 }
