--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "droidx",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
