--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "rotating-file-stream": "^2.1.3"
+    "rotating-file-stream": "^2.1.3",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "gulp-rev": "^9.0.0"
